fix weird spacing issue with weird hack
fix spacing

--- a/anderson-cv.css
+++ b/anderson-cv.css
@@ -404,3 +404,7 @@ td {
 .prof td:nth-child(2) {
   padding-left: 15px;
 }
+
+sp {
+  color: #FFF;
+}
